finalisation des vues

--- a/src/PocketLib/PocketLib.csproj
+++ b/src/PocketLib/PocketLib.csproj
@@ -37,9 +37,11 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
+		<MauiIcon Include="Resources\AppIcon\icon.png" />
+
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Basesize="128,128" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" BaseSize="26,26" />
@@ -53,59 +55,49 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Remove="Resources\Fonts\SF-Pro.ttf" />
-	  <None Remove="Resources\Images\calendar.svg" />
-	  <None Remove="Resources\Images\Mnochrome_chevron_right.svg" />
-	  <None Remove="Resources\Images\Monochrome_arrow_forward.svg" />
-	  <None Remove="Resources\Images\Monochrome_binoculars.svg" />
-	  <None Remove="Resources\Images\Monochrome_binoculars_fill.svg" />
-	  <None Remove="Resources\Images\monochrome_book.svg" />
-	  <None Remove="Resources\Images\Monochrome_bookmark.svg" />
-	  <None Remove="Resources\Images\Monochrome_bookmark_fill.svg" />
-	  <None Remove="Resources\Images\Monochrome_books_vertical.svg" />
-	  <None Remove="Resources\Images\Monochrome_books_vertical_fill.svg" />
-	  <None Remove="Resources\Images\Monochrome_book_closed.svg" />
-	  <None Remove="Resources\Images\Monochrome_book_closed_fill.svg" />
-	  <None Remove="Resources\Images\Monochrome_book_fill.svg" />
-	  <None Remove="Resources\Images\Monochrome_calendar_badge_clock.svg" />
-	  <None Remove="Resources\Images\Monochrome_eyeglasses.svg" />
-	  <None Remove="Resources\Images\Monochrome_gear.svg" />
-	  <None Remove="Resources\Images\Monochrome_heart.svg" />
-	  <None Remove="Resources\Images\Monochrome_heart_fill.svg" />
-	  <None Remove="Resources\Images\Monochrome_list_bullet.svg" />
-	  <None Remove="Resources\Images\Monochrome_magnifyingglass.svg" />
-	  <None Remove="Resources\Images\Monochrome_person.svg" />
-	  <None Remove="Resources\Images\Monochrome_person_2.svg" />
-	  <None Remove="Resources\Images\Monochrome_person_2_fill.svg" />
-	  <None Remove="Resources\Images\Monochrome_person_3.svg" />
-	  <None Remove="Resources\Images\Monochrome_person_3_fill.svg" />
-	  <None Remove="Resources\Images\Monochrome_person_badge_clock.svg" />
-	  <None Remove="Resources\Images\Monochrome_person_badge_clock_fill.svg" />
-	  <None Remove="Resources\Images\Monochrome_person_fill.svg" />
-	  <None Remove="Resources\Images\Monochrome_sparkles.svg" />
-	  <None Remove="Resources\Images\Monochrome_sunglasses.svg" />
-	  <None Remove="Resources\Images\Monochrome_tag.svg" />
-	  <None Remove="Resources\Images\Monochrome_tag_fill.svg" />
-	  <None Remove="Resources\Images\Monochrome_text_book_closed.svg" />
-	  <None Remove="Resources\Images\Monochrome_text_book_closed_fill.svg" />
-	  <None Remove="Resources\Images\Monochrome_tray_2.svg" />
-	  <None Remove="Resources\Images\Monochrome_tray_2_fill.svg" />
-	  <None Remove="Resources\Images\plus.svg" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="The49.Maui.ContextMenu" Version="1.0.0-alpha1" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Pages\Controls\ButtonViewNoHeaderImage.xaml.cs">
+	    <DependentUpon>ButtonViewNoHeaderImage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Pages\Controls\ButtonView.xaml.cs">
+	    <DependentUpon>ButtonView.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Pages\ListPage.xaml.cs">
 	    <DependentUpon>ListPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Pages\AuthorPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Controls\ButtonViewNoChevron.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Controls\DetailsView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Controls\ButtonViewNoHeaderImage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\Controls\PreviewView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Controls\Resumeview.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Controls\SeparatorWithTitle.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Controls\StarsView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Controls\TitleAndDescView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\DatePage.xaml">
@@ -120,10 +112,13 @@
 	  <MauiXaml Update="Pages\ListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\Controls\MenuButtonView.xaml">
+	  <MauiXaml Update="Pages\Controls\ButtonView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\Controls\SearchBarView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\TempPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
