--- a/src/PocketLib/PocketLib.csproj
+++ b/src/PocketLib/PocketLib.csproj
@@ -57,6 +57,7 @@
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="The49.Maui.ContextMenu" Version="1.0.0-alpha1" />
 	</ItemGroup>
 
@@ -127,6 +128,11 @@
 	  <MauiXaml Update="Pages\TempPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Model\Model.csproj" />
+	  <ProjectReference Include="..\Stub\Stub.csproj" />
 	</ItemGroup>
 
 </Project>
