--- a/src/PocketLib/PocketLib.csproj
+++ b/src/PocketLib/PocketLib.csproj
@@ -133,6 +133,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\Model\Model.csproj" />
 	  <ProjectReference Include="..\Stub\Stub.csproj" />
+	  <ProjectReference Include="..\ViewModels\ViewModels.csproj" />
 	</ItemGroup>
 
 </Project>
