--- a/src/ViewModels/ViewModels.csproj
+++ b/src/ViewModels/ViewModels.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\InsaneMVVMToolKit\InsaneMVVMToolKit.csproj" />
       <ProjectReference Include="..\Model\Model.csproj" />
       <ProjectReference Include="..\Stub\Stub.csproj" />
     </ItemGroup>
