--- a/src/ViewModels/ViewModels.csproj
+++ b/src/ViewModels/ViewModels.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\Stub\Stub.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
+    </ItemGroup>
+
 </Project>
